--- a/style/style.css
+++ b/style/style.css
@@ -64,16 +64,19 @@ p {
 	min-height: 700px;
 }
 
-.circle {
+.skillset-content {
 	height: 150px;
 	width: 150px;
 	background-color: #f8f8f8;
 	color: rgb(51, 122, 183);
-	border-radius: 50%;
 }
 
-.skillset .circle p {
+.skillset .skillset-content p {
 	font-size: 20px;
+}
+
+.skillset h2, .skillset h3 {
+	margin-top: 5px;
 }
 
 /* ========== Portfolio ========== */
